--- a/dist.ini
+++ b/dist.ini
@@ -3,10 +3,20 @@ author = Jesse Luehrs <doy at cpan dot org>
 license = MIT
 copyright_holder = Jesse Luehrs
 
-[@DOY]
+[FileFinder::Filter / WeaverFiles]
+finder = :InstallModules
+finder = :ExecFiles
+skip = ^lib/Text/Handlebars/Compiler.pm$
+skip = ^lib/Text/Handlebars/Symbol.pm$
+skip = ^lib/Text/Xslate/Syntax/Handlebars.pm$
+
+[@Filter]
+-bundle = @DOY
+-remove = EOLTests
 :version = 0.08
 dist = Text-Handlebars
 repository = github
+PodWeaver_finder = WeaverFiles
 
 [AutoPrereqs]
 
