--- a/META.yml
+++ b/META.yml
@@ -25,10 +25,10 @@ no_index:
     - Text::Handlebars::Symbol
     - Text::Xslate::Syntax::Handlebars
 requires:
-  Any::Moose: 0
   Carp: 0
+  Mouse: 0
   Scalar::Util: 0
-  Text::Xslate: 1.6000
+  Text::Xslate: 2.0000
   Text::Xslate::Compiler: 0
   Text::Xslate::Parser: 0
   Text::Xslate::Symbol: 0
@@ -42,7 +42,7 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Text-Handlebars
   homepage: http://metacpan.org/release/Text-Handlebars
   repository: git://github.com/doy/text-handlebars.git
-version: 0.02
+version: 0.03
 x_Dist_Zilla:
   perl:
     version: 5.016002
