Import of DOY/Text-Handlebars-0.04 from CPAN.
gitpan-cpan-distribution: Text-Handlebars
gitpan-cpan-version:      0.04
gitpan-cpan-path:         DOY/Text-Handlebars-0.04.tar.gz
gitpan-cpan-author:       DOY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,56 +1,63 @@
 ---
 abstract: 'http://handlebarsjs.com/ for Text::Xslate'
 author:
-  - 'Jesse Luehrs <doy at cpan dot org>'
+  - 'Jesse Luehrs <doy@tozt.net>'
 build_requires:
-  File::Find: 0
-  File::Temp: 0
-  Sub::Exporter: 0
-  Test::Builder: 0
-  Test::Fatal: 0
-  Test::More: 0.88
-  Test::Requires: 0
+  File::Spec: '0'
+  IO::Handle: '0'
+  IPC::Open3: '0'
+  Sub::Exporter: '0'
+  Test::Builder: '0'
+  Test::Fatal: '0'
+  Test::More: '0.88'
+  Test::Requires: '0'
+  lib: '0'
+  perl: '5.006'
 configure_requires:
-  ExtUtils::MakeMaker: 6.30
+  ExtUtils::MakeMaker: '6.30'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300028, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 5.014, CPAN::Meta::Converter version 2.140640'
 license: mit
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Text-Handlebars
 no_index:
   package:
     - Text::Handlebars::Compiler
     - Text::Handlebars::Symbol
     - Text::Xslate::Syntax::Handlebars
+provides:
+  Text::Handlebars:
+    file: lib/Text/Handlebars.pm
+    version: '0.04'
 requires:
-  Carp: 0
-  Mouse: 0
-  Scalar::Util: 0
-  Text::Xslate: 2.0000
-  Text::Xslate::Compiler: 0
-  Text::Xslate::Parser: 0
-  Text::Xslate::Symbol: 0
-  Text::Xslate::Util: 0
-  Try::Tiny: 0
-  base: 0
-  constant: 0
-  strict: 0
-  warnings: 0
+  Carp: '0'
+  Mouse: '0'
+  Scalar::Util: '0'
+  Text::Xslate: '2.0000'
+  Text::Xslate::Compiler: '0'
+  Text::Xslate::Parser: '0'
+  Text::Xslate::Symbol: '0'
+  Text::Xslate::Util: '0'
+  Try::Tiny: '0'
+  base: '0'
+  constant: '0'
+  strict: '0'
+  warnings: '0'
 resources:
-  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Text-Handlebars
+  bugtracker: https://github.com/doy/text-handlebars/issues
   homepage: http://metacpan.org/release/Text-Handlebars
   repository: git://github.com/doy/text-handlebars.git
-version: 0.03
+version: '0.04'
 x_Dist_Zilla:
   perl:
-    version: 5.016002
+    version: '5.018002'
   plugins:
     -
       class: Dist::Zilla::Plugin::FileFinder::Filter
       name: WeaverFiles
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -58,166 +65,290 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: '@Filter/TestMoreDoneTesting'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Filter/GatherDir'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Filter/PruneCruft'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Filter/ManifestSkip'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Filter/MetaYAML'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::License
       name: '@Filter/License'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Filter/Readme'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::RunExtraTests
+      config:
+        Dist::Zilla::Role::TestRunner:
+          default_jobs: 1
       name: '@Filter/RunExtraTests'
-      version: 0.007
+      version: '0.018'
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Filter/ExecDir'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Filter/ShareDir'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::MakeMaker
+      config:
+        Dist::Zilla::Role::TestRunner:
+          default_jobs: 1
       name: '@Filter/MakeMaker'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Filter/Manifest'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Filter/TestRelease'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Filter/ConfirmRelease'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Filter/MetaConfig'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Filter/MetaJSON'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@Filter/NextRelease'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::CheckChangesHasContent
       name: '@Filter/CheckChangesHasContent'
-      version: 0.006
+      version: '0.006'
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Filter/PkgVersion'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::Authority
       name: '@Filter/Authority'
-      version: 1.006
+      version: '1.006'
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Filter/PodCoverageTests'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Filter/PodSyntaxTests'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::NoTabsTests
+      config:
+        Dist::Zilla::Plugin::Test::NoTabs:
+          module_finder:
+            - ':InstallModules'
+          script_finder:
+            - ':ExecFiles'
       name: '@Filter/NoTabsTests'
-      version: 0.01
+      version: '0.06'
     -
       class: Dist::Zilla::Plugin::Test::Compile
+      config:
+        Dist::Zilla::Plugin::Test::Compile:
+          filename: t/00-compile.t
+          module_finder:
+            - ':InstallModules'
+          script_finder:
+            - ':ExecFiles'
       name: '@Filter/Test::Compile'
-      version: 1.112820
+      version: '2.039'
     -
       class: Dist::Zilla::Plugin::Metadata
       name: '@Filter/Metadata'
-      version: 3.03
+      version: '3.03'
     -
       class: Dist::Zilla::Plugin::MetaResources
       name: '@Filter/MetaResources'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Filter/Git::Check'
-      version: 2.001
+      version: '2.020'
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@Filter/Git::Commit'
-      version: 2.001
+      version: '2.020'
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: '@Filter/Git::Tag'
-      version: 2.001
+      version: '2.020'
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
       name: '@Filter/Git::NextVersion'
-      version: 2.001
+      version: '2.020'
+    -
+      class: Dist::Zilla::Plugin::ContributorsFromGit
+      name: '@Filter/ContributorsFromGit'
+      version: '0.006'
+    -
+      class: Dist::Zilla::Plugin::MetaProvides::Package
+      config:
+        Dist::Zilla::Plugin::MetaProvides::Package:
+          finder_objects:
+            -
+              class: Dist::Zilla::Plugin::FinderCode
+              name: '@Filter/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
+              version: '5.014'
+        Dist::Zilla::Role::MetaProvider::Provider:
+          inherit_missing: '1'
+          inherit_version: '1'
+          meta_noindex: '1'
+      name: '@Filter/MetaProvides::Package'
+      version: '2.000001'
     -
       class: Dist::Zilla::Plugin::PodWeaver
+      config:
+        Dist::Zilla::Plugin::PodWeaver:
+          finder:
+            - WeaverFiles
+          plugins:
+            -
+              class: Pod::Weaver::Plugin::EnsurePod5
+              name: '@CorePrep/EnsurePod5'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Plugin::H1Nester
+              name: '@CorePrep/H1Nester'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Plugin::SingleEncoding
+              name: '@Default/SingleEncoding'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Name
+              name: '@Default/Name'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Version
+              name: '@Default/Version'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Region
+              name: '@Default/prelude'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Generic
+              name: SYNOPSIS
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Generic
+              name: DESCRIPTION
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Generic
+              name: OVERVIEW
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Collect
+              name: ATTRIBUTES
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Collect
+              name: METHODS
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Collect
+              name: FUNCTIONS
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Leftovers
+              name: '@Default/Leftovers'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Region
+              name: '@Default/postlude'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Authors
+              name: '@Default/Authors'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Legal
+              name: '@Default/Legal'
+              version: '4.006'
       name: '@Filter/PodWeaver'
-      version: 3.101641
+      version: '4.005'
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Filter/UploadToCPAN'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: AutoPrereqs
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::MetaNoIndex
       name: MetaNoIndex
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300028
+      version: '5.014'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300028
+      version: '5.014'
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':AllFiles'
+      version: '5.014'
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':NoFiles'
+      version: '5.014'
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: '@Filter/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
+      version: '5.014'
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
-      is_trial: 0
-    version: 4.300028
+      is_trial: '0'
+    version: '5.014'
 x_authority: cpan:DOY
+x_contributors:
+  - 'Fitz Elliott <fitz.elliott@gmail.com>'
+  - 'Logan Bell <loganbell@gmail.com>'
+  - 'Shawn M Moore <code@sartak.org>'
+  - 'tokuhirom <tokuhirom@gmail.com>'
