--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name = Text-Handlebars
-author = Jesse Luehrs <doy at cpan dot org>
+author = Jesse Luehrs <doy@tozt.net>
 license = MIT
 copyright_holder = Jesse Luehrs
 
@@ -13,7 +13,7 @@ skip = ^lib/Text/Xslate/Syntax/Handlebars.pm$
 [@Filter]
 -bundle = @DOY
 -remove = EOLTests
-:version = 0.08
+:version = 0.14
 dist = Text-Handlebars
 repository = github
 PodWeaver_finder = WeaverFiles
